--- a/stage2/02-net-tweaks/files/wpa_supplicant.conf
+++ b/stage2/02-net-tweaks/files/wpa_supplicant.conf
@@ -1,3 +1,8 @@
 country=GB
 ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
+
+#network={
+#    ssid="Your_ESSID"
+#    psk="Your_wifi_password"
+#}
